text menu modification

--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
             <ul class="flex">
                 <li>
                     <a class="menu-selected" href="/" onclick="route()">
-                        <span class="sr-only">Home/Página principal</span>
+                        <span class="sr-only">Home page</span>
                         Home
                     </a>
                 </li>
                 <li>
                     <a href="/universe" onclick="route()">
-                        <span class="sr-only">O universo</span>
-                        O Universo
+                        <span class="sr-only">The Universe</span>
+                        The Universe
                     </a>
                 </li>
                 <li>
                     <a href="/exploration" onclick="route()">
-                        <span class="sr-only">Exploração</span>
-                        Exploração
+                        <span class="sr-only">Exploration</span>
+                        Exploration
                     </a>
                 </li>
             </ul>
